# nas-Chrome-Downloader

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
extension/: background.js  manifest.json  options.html  options.js  popup.html  popup.js
