[package]
name = "nas-downloader"
version = "0.1.0"
edition = "2021"
description = "Self-hosted Rust download server for NAS, paired with a Chrome extension."

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "gzip", "brotli"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "6"
sanitize-filename = "0.5"
tokio-util = "0.7"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
